# Order-Statistic-App

./: docker-compose.yaml
nginx/: default.conf
order_app/: .coveragerc  .env.test  Dockerfile  app.py  pyproject.toml
order_app/migrations/versions/: 933f3e913fe7_database_creation.py
order_app/tests/api/: conftest.py  test_orders.py  test_products.py  test_storage.py  test_users.py
order_app/tests/database/: conftest.py  test_models.py  test_repo_generic_users.py  test_repo_orders.py  test_repo_products.py  test_repo_storage.py
order_app/tests/service/: conftest.py  test_orders_service.py  test_products_service.py  test_service_user.py  test_storage_service.py
order_app/webapp/: __init__.py  container.py  extensions.py  settings.py
order_app/webapp/api/: __init__.py  error_handlers.py
order_app/webapp/api/orders/: __init__.py  mappers.py  routes.py  schemas.py
order_app/webapp/api/products/: __init__.py  mappers.py  routes.py  schemas.py
order_app/webapp/api/storage/: __init__.py  mappers.py  routes.py  schemas.py
order_app/webapp/api/users/: __init__.py  mappers.py  routes.py  schemas.py
order_app/webapp/core/: error_handlers.py
order_app/webapp/database/models/: __init__.py  order_details.py  orders.py  products.py  storage.py  users.py
order_app/webapp/database/repositories/: generic.py  orders.py  products.py  storage.py  users.py
order_app/webapp/services/: exceptions.py  exeptions.py
order_app/webapp/services/orders/: dtos.py  mappers.py  service.py
order_app/webapp/services/products/: dtos.py  mappers.py  service.py
order_app/webapp/services/storage/: dtos.py  mappers.py  service.py
order_app/webapp/services/users/: dtos.py  mappers.py  service.py
